--- a/src/com/ZArtemDev/RuLangWorkbookApp/admin.fxml
+++ b/src/com/ZArtemDev/RuLangWorkbookApp/admin.fxml
@@ -1,11 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.AdminController">
-   <children>
-      <CheckBox layoutX="264.0" layoutY="192.0" mnemonicParsing="false" text="CheckBox" />
-   </children>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.AdminController">
+   <left>
+      <VBox alignment="TOP_CENTER" prefHeight="363.0" prefWidth="177.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="addUserBtn" maxWidth="150.0" minWidth="150.0" mnemonicParsing="false" onAction="#createAddPane" prefWidth="150.0" text="Добавить пользователя">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="removeUserBtn" maxWidth="150.0" minWidth="150.0" mnemonicParsing="false" prefWidth="150.0" text="Удалить пользователя" />
+         </children>
+      </VBox>
+   </left>
+   <top>
+      <HBox alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="userNameLabel">
+               <HBox.margin>
+                  <Insets left="20.0" right="20.0" />
+               </HBox.margin>
+            </Label>
+            <Button fx:id="exitBtn" mnemonicParsing="false" onAction="#exit" text="Выйти">
+               <HBox.margin>
+                  <Insets left="20.0" right="20.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+      </HBox>
+   </top>
+   <center>
+      <VBox fx:id="mainVBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+   </center>
+</BorderPane>
