--- a/src/com/ZArtemDev/RuLangWorkbookApp/addingUserPane.fxml
+++ b/src/com/ZArtemDev/RuLangWorkbookApp/addingUserPane.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.AddingUserController">
+<VBox fx:id="root" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.AddingUserController">
    <children>
       <GridPane>
         <columnConstraints>
@@ -24,22 +24,23 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label prefHeight="17.0" prefWidth="171.0" text="Имя пользователя и пароль: " GridPane.rowIndex="3" />
-            <Label text="Тип: " GridPane.rowIndex="4" />
-            <ChoiceBox fx:id="typeChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label prefHeight="17.0" prefWidth="171.0" text="Имя пользователя и пароль: " GridPane.rowIndex="4" />
+            <Label text="Тип: " GridPane.rowIndex="3" />
+            <ChoiceBox fx:id="typeChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label text="Фамилия:" />
             <Label text="Имя:" GridPane.rowIndex="1" />
             <Label text="Отчество:" GridPane.rowIndex="2" />
             <TextField fx:id="lastName" GridPane.columnIndex="1" />
             <TextField fx:id="firstName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label fx:id="generatedNameAndPass" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Button fx:id="genBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Gen" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Label fx:id="generatedNameAndPass" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Button fx:id="genBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Gen" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <Button fx:id="createBtn" alignment="CENTER" mnemonicParsing="false" text="Добавить" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
-      <Button fx:id="createBtn" alignment="CENTER" mnemonicParsing="false" text="Добавить" />
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
