--- a/src/com/ZArtemDev/RuLangWorkbookApp/student/student.fxml
+++ b/src/com/ZArtemDev/RuLangWorkbookApp/student/student.fxml
@@ -5,8 +5,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 
-<BorderPane fx:id="root" fx:controller="com.ZArtemDev.RuLangWorkbookApp.student.StudentController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.student.StudentController">
    <top>
       <HBox alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -20,4 +21,13 @@
                </HBox.margin></Button>
          </children></HBox>
    </top>
+   <center>
+      <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </center>
+   <left>
+      <Pane prefWidth="20.0" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <Pane prefWidth="20.0" BorderPane.alignment="CENTER" />
+   </right>
 </BorderPane>
