--- a/src/com/ZArtemDev/RuLangWorkbookApp/admin/admin.fxml
+++ b/src/com/ZArtemDev/RuLangWorkbookApp/admin/admin.fxml
@@ -8,34 +8,37 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.admin.AdminController">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@admin.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.admin.AdminController">
    <left>
-      <VBox alignment="TOP_CENTER" prefHeight="363.0" prefWidth="177.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="363.0" prefWidth="177.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="addUserBtn" maxWidth="150.0" minWidth="150.0" mnemonicParsing="false" prefWidth="150.0" text="Добавить пользователя">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </Button>
-            <Button fx:id="removeUserBtn" maxWidth="150.0" minWidth="150.0" mnemonicParsing="false" prefWidth="150.0" text="Удалить пользователя">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin></Button>
-            <Button fx:id="addSchoolBtn" maxWidth="150.0" minWidth="150.0" mnemonicParsing="false" prefWidth="150.0" text="Добавить школу">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </Button>
-            <Button fx:id="tuneSchoolBtn" maxWidth="150.0" minWidth="150.0" mnemonicParsing="false" prefWidth="150.0" text="Настроить школу">
+            <Button fx:id="addUserBtn" maxWidth="192.0" minWidth="150.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="192.0" text="Добавить пользователя">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
             </Button>
+            <Button fx:id="removeUserBtn" maxWidth="187.0" minWidth="150.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="187.0" text="Удалить пользователя">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></Button>
+            <Button fx:id="addSchoolBtn" maxWidth="187.0" minWidth="150.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="187.0" text="Добавить школу">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="tuneSchoolBtn" maxWidth="183.0" minWidth="150.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="183.0" text="Настроить школу">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Button>
          </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
       </VBox>
    </left>
    <top>
-      <HBox alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <HBox fx:id="header" alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <Label fx:id="label_username">
                <HBox.margin>
@@ -54,6 +57,9 @@
       </HBox>
    </top>
    <center>
-      <AnchorPane fx:id="mainBox" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <AnchorPane fx:id="mainBox" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin></AnchorPane>
    </center>
 </BorderPane>
