--- a/src/com/ZArtemDev/RuLangWorkbookApp/admin/tunning_school_pane.fxml
+++ b/src/com/ZArtemDev/RuLangWorkbookApp/admin/tunning_school_pane.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,9 +9,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.admin.TunningSchoolPaneController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" stylesheets="@tune_school.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.admin.TunningSchoolPaneController">
    <children>
-      <GridPane fx:id="gridPane_select_school" layoutX="27.0" prefHeight="48.0" prefWidth="546.0" AnchorPane.bottomAnchor="350.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="0.0">
+      <GridPane fx:id="gridPane_select_school" layoutX="25.0" layoutY="50.0" prefHeight="48.0" prefWidth="546.0" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -33,7 +34,10 @@
             <ComboBox fx:id="comboBox_location" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <ComboBox fx:id="comboBox_school" prefWidth="150.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </GridPane>
-      <FlowPane fx:id="flowPane_classes" layoutY="79.0" prefHeight="200.0" prefWidth="600.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
+      <FlowPane fx:id="flowPane_classes" layoutX="50.0" layoutY="100.0" prefHeight="200.0" prefWidth="600.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="100.0" />
    </children>
 </AnchorPane>
