--- a/src/com/ZArtemDev/RuLangWorkbookApp/teacher/teacher.fxml
+++ b/src/com/ZArtemDev/RuLangWorkbookApp/teacher/teacher.fxml
@@ -3,12 +3,15 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="root" fx:controller="com.ZArtemDev.RuLangWorkbookApp.teacher.TeacherController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@teacher.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.teacher.TeacherController">
    <top>
-      <HBox alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="600.0">
+      <HBox fx:id="header" alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="600.0">
          <children>
             <Label fx:id="label_username">
                <HBox.margin>
@@ -23,4 +26,19 @@
          </children>
       </HBox>
    </top>
+   <center>
+      <AnchorPane fx:id="anchorPane_courses" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+         </BorderPane.margin>
+         <children>
+            <Label layoutX="14.0" layoutY="14.0" text="Активные курсы:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <VBox fx:id="vBox_courses" layoutX="14.0" layoutY="31.0" prefHeight="257.0" prefWidth="522.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="40.0" />
+         </children>
+      </AnchorPane>
+   </center>
 </BorderPane>
