--- a/src/com/ZArtemDev/RuLangWorkbookApp/admin/adding_user_pane.fxml
+++ b/src/com/ZArtemDev/RuLangWorkbookApp/admin/adding_user_pane.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
@@ -84,9 +86,17 @@
         </rowConstraints>
          <children>
             <Label prefHeight="17.0" prefWidth="171.0" text="Имя пользователя и пароль: " />
-            <Label fx:id="label_generated_name_and_pass" GridPane.rowIndex="1" />
-            <Button fx:id="button_generate" mnemonicParsing="false" prefHeight="25.0" prefWidth="195.0" text="Сгенерировать имя и пароль" GridPane.columnIndex="1" />
-            <Button fx:id="button_add_new_user" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="199.0" text="Добавить" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="button_add_new_user" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Добавить" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="button_generate" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Сгенерировать имя и пароль" GridPane.columnIndex="1" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="1.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+               <children>
+                  <TextField fx:id="textField_login" prefHeight="25.0" prefWidth="200.0" />
+                  <TextField fx:id="textField_password" prefHeight="25.0" prefWidth="200.0" />
+               </children>
+               <padding>
+                  <Insets left="5.0" right="5.0" />
+               </padding>
+            </HBox>
          </children>
       </GridPane>
    </children>
