--- a/src/com/ZArtemDev/RuLangWorkbookApp/admin/removing_user_pane.fxml
+++ b/src/com/ZArtemDev/RuLangWorkbookApp/admin/removing_user_pane.fxml
@@ -5,39 +5,42 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" stylesheets="@tune_school.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.admin.TunningSchoolPaneController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="800.0" stylesheets="@tune_school.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ZArtemDev.RuLangWorkbookApp.admin.RemovingUserController">
    <children>
       <GridPane fx:id="gridPane_select_school" layoutX="25.0" layoutY="50.0" prefHeight="48.0" prefWidth="546.0" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="48.0" minHeight="10.0" prefHeight="17.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="41.0" minHeight="9.0" prefHeight="40.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="48.0" minHeight="10.0" prefHeight="17.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="41.0" minHeight="9.0" prefHeight="40.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <Label prefHeight="17.0" prefWidth="101.0" text="Выберите школу:" GridPane.rowIndex="1" />
-            <Label text="Федеральный округ" GridPane.columnIndex="1" />
-            <Label text="Область" GridPane.columnIndex="2" />
+            <Label prefHeight="17.0" prefWidth="101.0" text="Выберите класс:" GridPane.rowIndex="1" />
+            <Label text="Федеральный Округ" GridPane.columnIndex="1" />
+              <Label text="Область" GridPane.columnIndex="2" />
             <Label text="Город" GridPane.columnIndex="3" />
             <Label text="Школа" GridPane.columnIndex="4" />
+            <Label text="Класс" GridPane.columnIndex="5" />
             <ComboBox fx:id="comboBox_region" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="comboBox_district" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <ComboBox fx:id="comboBox_location" prefWidth="150.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <ComboBox fx:id="comboBox_school" prefWidth="150.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <ComboBox fx:id="comboBox_class" prefWidth="150.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
-      <FlowPane fx:id="flowPane_classes" layoutX="50.0" layoutY="100.0" prefHeight="200.0" prefWidth="600.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="100.0" />
+      <VBox fx:id="vBox_users" layoutX="350.0" layoutY="126.0" prefHeight="249.0" prefWidth="750.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="100.0" />
    </children>
 </AnchorPane>
